--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Scheduled Test Run
 
 on:
   schedule:
-    - cron: '38 10 * * *'  # every day at 9am UTC
+    - cron: '50 10 * * *'  # every day at 9am UTC
   workflow_dispatch:      # optional: lets you trigger manually via UI
 
 jobs:
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '22'
+          distribution: 'temurin'
 
       - name: Run Tests
         run: mvn test  # replace with your actual test command
