--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,20 @@
     <groupId>com.swaglabs</groupId>
     <artifactId>swaglabs</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
     <dependency>
       <groupId>com.microsoft.playwright</groupId>
